[tool.poetry]
name = "hjkl-2048"
version = "1.0.0"
description = "play 2048 with hjkl"
authors = ["worldmaker <worldmaker18349276@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
